# fundamentus

./: README.md  fundamentus-tabela.py  pyproject.toml  server.py
vanish/: LICENSE  main.py
