[tool.poetry]
name = "fundamentus"
version = "0.1.0"
description = ""
authors = ["Felipe Markson <fmarkson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
lxml = "^4.5.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
